--- a/css/about.css
+++ b/css/about.css
@@ -128,6 +128,7 @@ p {
 
 
 header {
+    
     background-color: midnightblue;
     color: dimgray;
 }
@@ -142,7 +143,7 @@ header {
 }
  .links a {
     text-decoration: none;
-    color: dimgray;
+    color: white;
   } 
 
   .group1 {
