--- a/less/index.less
+++ b/less/index.less
@@ -240,7 +240,7 @@ a:hover {
 
     img {
         .img-size(auto, 48%);
-        border-radius: 5px;
+        border-radius: 10px;
     }
 }
 
@@ -260,11 +260,18 @@ a:hover {
     padding-top: 2%;
 
     img {
-        .img-size(200px, 200px);
+        .img-size(300px, 300px);
         border-radius: 10px;
+        margin-bottom: 3%;
+    }
+
+    p {
+        margin-bottom: 3%;
+        width: 70%;
     }
         .button {
             font: bold;
+            font-size: 1.5rem;
             font-family: 'Ubuntu', sans-serif;
             color:#fff;
             text-decoration: none;
@@ -286,6 +293,7 @@ a:hover {
       box-shadow: inset 0px 1px 2px darken(@color,30%);
     }
   }
+
 
 .leftContent {
     width: 60%;
@@ -321,7 +329,7 @@ a:hover {
 }
 
 footer {
-    padding-top: 5%;
+    padding: 5% 0 2% 0;
     text-align: center;
     color: @midnight;
     font-size: 1.5rem;
